# codex-blender-runpod-v1

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md
.github/workflows/: build-sandbox-image.yml
broker/: pyproject.toml
broker/app/: config.py  main.py  models.py
broker/app/routes/: auth.py  health.py  jobs.py  provision.py  snapshots.py  viewer.py
broker/app/services/: artifact_store.py  auth.py  job_service.py  local_sandbox.py  sandbox_executor.py  snapshot_store.py
broker/openapi/: bridge.openapi.yaml
codex/: maintenance.sh  sandbox_client.py  setup.sh  submit_job.py  upload_snapshot.py
docs/: architecture.md  authentication.md  codex-environment.md  decision-log.md  local-docker-setup.md  minimal-user-steps.md  open-questions.md  pipeline.md  references.md  runpod-setup.md
infra/local/: ensure_local_runtime.py  start_local_stack.ps1
infra/runpod/: deploy_pod.py  pod_payload.example.json
prompts/local/: runpod-bootstrap.md
sandbox-image/: Dockerfile  install_warp.sh  requirements.txt  start-all.sh
sandbox-image/custom-cont-init.d/: 00-codex-workspace
sandbox-image/custom-services.d/: codex-broker
sandbox-runtime/: ensure_blender_running.sh  launch_blender.sh  local_runtime_client.py  run_job.py
sandbox-runtime/blender_runtime/: blender_tcp_runtime.py
sandbox-runtime/blender_scripts/: playback_smoke.py  ui_smoke.py
